microservices/app/crawler-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  labels:
    app: search_engine
    component: crawler
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search_engine
      component: crawler
  template:
    metadata:
      name: crawler
      labels:
        app: search_engine
        component: crawler
    spec:
      containers:
      - image: root31337/crawler:latest
        name: crawler
