microservices/app/crawler-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: search_engine
    component: crawler
  type: ClusterIP
