microservices/app/ui-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ui
  labels:
    app: search_engine
    component: ui
    
spec:
  type: ClusterIP
  ports:
   - name: http
     protocol: TCP
     port: 8000
     targetPort: 8000
  selector:
    app: search_engine
    component: ui
